...


    render() {
        return (
            <View style={styles.container}>
                <FlatList
                    testID='friendsList'
                    data={this.state.data}
                    ItemSeparatorComponent={() => <View style={styles.itemDivider}/>}
                    renderItem={({item}) =>
                        <TouchableOpacity onPress={() => this.goToChatScreen()}>
                            <View style={styles.itemContainer}>
                                <Image
...
